[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "infinite-craft"
version = "1.0.5"
authors = [
    { name = "sqdnoises" }
]
description = "An API Wrapper of Neal's Infinite Craft game in Python for people to implement in their programs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "aiohttp"
]

[project.urls]
Homepage = "https://github.com/sqdnoises/infinite-craft"

[project.scripts]
infinite-craft = "infinitecraft.__main__:parse"
infinitecraft = "infinitecraft.__main__:parse"

[project.optional-dependencies]
# plan to use in future
# windows = [
#     "pyreadline3"
# ]

dev = [
    "pytest", "pytest-asyncio", # for testing
    "fastapi", "uvicorn", # for mock api during testing
    "bumpver", # for controlling version 
    "pip-tools", "build", "twine" # for tools
]

[tool.bumpver]
current_version = "1.0.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"infinitecraft/__init__.py" = ['__version__ = "{version}"']
"README.md" = [
    "# infinite-craft `{version}`",
    "https://img.shields.io/badge/infinite--craft_version-{version}-red"
]