[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinite-craft"
version = "1.1.4"
authors = [{ name = "sqdnoises" }]
description = "An API Wrapper for Neal's Infinite Craft game in Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp",

    # mock api
    "fastapi",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/sqdnoises/infinite-craft"
Discord = "https://discord.gg/9BhN3BrE6n"

[project.scripts]
infinite-craft = "infinitecraft.__main__:parse"
infinitecraft = "infinitecraft.__main__:parse"

[project.optional-dependencies]
# plan to use in future
# windows = [
#     "pyreadline3"
# ]

dev = [
    # code formatting
    "black",

    # testing
    "pytest",
    "pytest-asyncio",

    # version control
    "bumpver",

    # tools
    "pip-tools",
    "build",
    "twine",
]

[tool.setuptools]
packages = ["infinitecraft"]

[tool.bumpver]
current_version = "1.1.4"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"infinitecraft/__init__.py" = ['__version__ = "{version}"']
"README.md" = [
    "# infinite-craft `{version}`",
    "https://img.shields.io/badge/infinite--craft_version-{version}-red",
]
