[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinite-craft"
authors = [{ name = "sqdnoises" }]
description = "An API Wrapper for Neal's Infinite Craft game in Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version", "dependencies"]

[tool.setuptools]
packages = ["infinitecraft"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[project.urls]
Homepage = "https://github.com/sqdnoises/infinite-craft"
"Issue tracker" = "https://github.com/sqdnoises/infinite-craft/issues"
Discord = "https://discord.gg/9BhN3BrE6n"

[project.scripts]
infinite-craft = "infinitecraft.__main__:parse"
infinitecraft = "infinitecraft.__main__:parse"

[project.optional-dependencies]
dev = [
    # code formatting
    "black",

    # testing
    "pytest",
    "pytest-asyncio",

    # mock api
    "fastapi",
    "uvicorn",

    # tools
    "pip-tools",
    "build",
    "twine",
]
